@@ -2,9 +2,10 @@ package dpf.mt.gpinf.mapas.webkit;
 
 import java.awt.Component;
 import java.io.IOException;
+import java.util.Base64;
 import java.util.HashMap;
-
-import javax.xml.bind.DatatypeConverter;
+import java.util.Iterator;
+import java.util.Map;
 
 import org.apache.commons.io.IOUtils;
 
@@ -44,7 +45,7 @@ public class MapaCanvasWebkit extends AbstractMapaCanvas {
 				webEngine.setJavaScriptEnabled(true);
 				webEngine.setOnAlert(new EventHandler<WebEvent<String>>() {
 					public void handle(WebEvent<String> event) {
-						System.out.println("Alert:"+event.getData());						
+						System.out.println("Alert:"+event.getData());						 //$NON-NLS-1$
 					}
 				});
 				
@@ -54,8 +55,8 @@ public class MapaCanvasWebkit extends AbstractMapaCanvas {
 					@Override
 					public void changed(ObservableValue<? extends State> observable, State oldState, State newState) {
 						if (newState == State.SUCCEEDED) {
-							JSObject window = (JSObject) webEngine.executeScript("window");
-							window.setMember("app", jsInterface);
+							JSObject window = (JSObject) webEngine.executeScript("window"); //$NON-NLS-1$
+							window.setMember("app", jsInterface); //$NON-NLS-1$
 		                }
 					}
 				});
@@ -98,26 +99,26 @@ public class MapaCanvasWebkit extends AbstractMapaCanvas {
 	@Override
 	public void setKML(String kml) {
 		  try {
-			  String html = IOUtils.toString(getClass().getResourceAsStream("main.html"), "UTF-8");
-			  String js = IOUtils.toString(getClass().getResourceAsStream("geoxmlfull_v3.js"), "UTF-8");
-			  String js2 = IOUtils.toString(getClass().getResourceAsStream("keydragzoom.js"), "UTF-8");
-			  String js3 = IOUtils.toString(getClass().getResourceAsStream("extensions.js"), "UTF-8");
-			  String js4 = IOUtils.toString(getClass().getResourceAsStream("ext_geoxml3.js"), "UTF-8");
+			  String html = IOUtils.toString(getClass().getResourceAsStream("main.html"), "UTF-8"); //$NON-NLS-1$ //$NON-NLS-2$
+			  String js = IOUtils.toString(getClass().getResourceAsStream("geoxmlfull_v3.js"), "UTF-8"); //$NON-NLS-1$ //$NON-NLS-2$
+			  String js2 = IOUtils.toString(getClass().getResourceAsStream("keydragzoom.js"), "UTF-8"); //$NON-NLS-1$ //$NON-NLS-2$
+			  String js3 = IOUtils.toString(getClass().getResourceAsStream("extensions.js"), "UTF-8"); //$NON-NLS-1$ //$NON-NLS-2$
+			  String js4 = IOUtils.toString(getClass().getResourceAsStream("ext_geoxml3.js"), "UTF-8"); //$NON-NLS-1$ //$NON-NLS-2$
 
-			  String b64_selecionado = "data:image/png;base64," + DatatypeConverter.printBase64Binary(IOUtils.toByteArray(getClass().getResourceAsStream("marcador_selecionado.png")));
-			  String b64_selecionado_m = "data:image/png;base64," + DatatypeConverter.printBase64Binary(IOUtils.toByteArray(getClass().getResourceAsStream("marcador_selecionado_m.png")));
-			  String b64_normal = "data:image/png;base64," + DatatypeConverter.printBase64Binary(IOUtils.toByteArray(getClass().getResourceAsStream("marcador_normal.png")));
-			  String b64_marcado = "data:image/png;base64," + DatatypeConverter.printBase64Binary(IOUtils.toByteArray(getClass().getResourceAsStream("marcador_marcado.png")));
+			  String b64_selecionado = "data:image/png;base64," + Base64.getEncoder().encodeToString(IOUtils.toByteArray(getClass().getResourceAsStream("marcador_selecionado.png"))); //$NON-NLS-1$ //$NON-NLS-2$
+			  String b64_selecionado_m = "data:image/png;base64," + Base64.getEncoder().encodeToString(IOUtils.toByteArray(getClass().getResourceAsStream("marcador_selecionado_m.png"))); //$NON-NLS-1$ //$NON-NLS-2$
+			  String b64_normal = "data:image/png;base64," + Base64.getEncoder().encodeToString(IOUtils.toByteArray(getClass().getResourceAsStream("marcador_normal.png"))); //$NON-NLS-1$ //$NON-NLS-2$
+			  String b64_marcado = "data:image/png;base64," + Base64.getEncoder().encodeToString(IOUtils.toByteArray(getClass().getResourceAsStream("marcador_marcado.png"))); //$NON-NLS-1$ //$NON-NLS-2$
 			  
-			  html = html.replace("{{load_geoxml3}}", js);
-			  html = html.replace("{{load_keydragzoom}}", js2);
-			  html = html.replace("{{load_extensions}}", js3);
-			  html = html.replace("{{load_geoxml3_ext}}", js4);
-			  html = html.replace("{{icone_selecionado_base64}}", b64_selecionado);
-			  html = html.replace("{{icone_base64}}", b64_normal);
-			  html = html.replace("{{icone_selecionado_m_base64}}", b64_selecionado_m);
-			  html = html.replace("{{icone_m_base64}}", b64_marcado);		  
-			  html = html.replace("{{kml}}", kml.replace("\n", "").replace("\r", ""));
+			  html = html.replace("{{load_geoxml3}}", js); //$NON-NLS-1$
+			  html = html.replace("{{load_keydragzoom}}", js2); //$NON-NLS-1$
+			  html = html.replace("{{load_extensions}}", js3); //$NON-NLS-1$
+			  html = html.replace("{{load_geoxml3_ext}}", js4); //$NON-NLS-1$
+			  html = html.replace("{{icone_selecionado_base64}}", b64_selecionado); //$NON-NLS-1$
+			  html = html.replace("{{icone_base64}}", b64_normal); //$NON-NLS-1$
+			  html = html.replace("{{icone_selecionado_m_base64}}", b64_selecionado_m); //$NON-NLS-1$
+			  html = html.replace("{{icone_m_base64}}", b64_marcado);		   //$NON-NLS-1$
+			  html = html.replace("{{kml}}", kml.replace("\n", "").replace("\r", "")); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$ //$NON-NLS-5$
 			  
 			  setText(html);		  
 		  } catch (IOException e) {
@@ -151,14 +152,38 @@ public class MapaCanvasWebkit extends AbstractMapaCanvas {
 
 			Platform.runLater(new Runnable() {
 				public void run() {
+					boolean marcadorselecionado = false; 
 					for(int i = 0; i<marks.length; i++){
 						Boolean b = selecoesAfazerCopy.get(marks[i]);
-						webEngine.executeScript("gxml.seleciona("+marks[i]+",'"+b+"');");
+						if(b){
+							marcadorselecionado=true;
+						}
+						try{
+							webEngine.executeScript("gxml.seleciona(\""+marks[i]+"\",'"+b+"');"); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+						}catch(Exception e){
+							e.printStackTrace();
+						}
+					}
+					if(marcadorselecionado){
+						webEngine.executeScript("gxml.centralizaSelecao();");
 					}
 				}
 			});
 			this.selecoesAfazer = null;
 		}
+	}
+
+	@Override
+	public void selecionaMarcador(final String mid, final boolean b) {
+		Platform.runLater(new Runnable() {
+			public void run() {
+				try{
+ 					webEngine.executeScript("gxml.marca(\""+mid+"\",'"+b+"');"); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+				}catch(Exception e){
+					e.printStackTrace();
+				}
+			}
+		});
 	}
 
 }
