@@ -16,6 +16,7 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 
 import javax.imageio.ImageIO;
@@ -31,18 +32,18 @@ import dpf.sp.gpinf.indexer.util.ImageUtil;
  */
 public class VideoThumbsMaker {
 
-  private String mplayer = "mplayer.exe";
-  private int timeoutProcess = 15000;
-  private int timeoutInfo = 10000;
-  private int timeoutFirstCall = 180000;
+  private String mplayer = "mplayer.exe"; //$NON-NLS-1$
+  private int timeoutProcess = 45000;
+  private int timeoutInfo = 15000;
+  private int timeoutFirstCall = 300000;
   private boolean verbose = false;
   private int quality = 50;
   private String escape = null;
   private boolean firstCall = true;
   private boolean isWindows = false;
-  private static final String prefix = "_vtm";
+  private static final String prefix = "_vtm"; //$NON-NLS-1$
   private int ignoreWaitKeyFrame;
-  private int maxLines = 20000;
+  private static final int maxLines = 20000;
 
   public String getVersion() {
     List<String> cmds = new ArrayList<String>(Arrays.asList(new String[]{mplayer}));
@@ -53,10 +54,10 @@ public class VideoThumbsMaker {
     }
     String info = res.output;
     if (info != null) {
-      if (info.indexOf("\n") > 0) {
-        info = info.substring(0, info.indexOf("\n"));
+      if (info.indexOf("\n") > 0) { //$NON-NLS-1$
+        info = info.substring(0, info.indexOf("\n")); //$NON-NLS-1$
       }
-      if (info.indexOf("MPlayer") < 0) {
+      if (info.indexOf("MPlayer") < 0) { //$NON-NLS-1$
         return null;
       }
     }
@@ -71,10 +72,10 @@ public class VideoThumbsMaker {
   public VideoProcessResult createThumbs(File inOrg, File tmp, List<VideoThumbsOutputConfig> outs) throws Exception {
     if (escape == null) {
       try {
-        escape = "";
-        if (System.getProperty("os.name").toLowerCase().indexOf("win") >= 0) {
+        escape = ""; //$NON-NLS-1$
+        if (System.getProperty("os.name").toLowerCase().indexOf("win") >= 0) { //$NON-NLS-1$ //$NON-NLS-2$
           isWindows = true;
-          escape = "\\\"";
+          escape = "\\\""; //$NON-NLS-1$
         }
       } catch (Exception e) {
       }
@@ -84,9 +85,9 @@ public class VideoThumbsMaker {
     VideoProcessResult result = new VideoProcessResult();
 
     File in = inOrg;
-    List<String> cmds = new ArrayList<String>(Arrays.asList(new String[]{mplayer, "-nosound", "-noautosub", "-noconsolecontrols", "-vo", "null", "-ao", "null", "-frames", "0", "-identify", in.getPath()}));
+    List<String> cmds = new ArrayList<String>(Arrays.asList(new String[] {mplayer,"-nosound","-noautosub","-noconsolecontrols","-vo","null","-ao","null","-frames","0","-identify",in.getPath()})); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$ //$NON-NLS-5$ //$NON-NLS-6$ //$NON-NLS-7$ //$NON-NLS-8$ //$NON-NLS-9$ //$NON-NLS-10$
 
-    File subTmp = new File(tmp, prefix + Thread.currentThread().getId() + "_" + System.currentTimeMillis());
+    File subTmp = new File(tmp, prefix + Thread.currentThread().getId() + "_" + System.currentTimeMillis()); //$NON-NLS-1$
     subTmp.mkdir();
     subTmp.deleteOnExit();
 
@@ -94,19 +95,22 @@ public class VideoThumbsMaker {
     File lnk = null;
     String videoStream = null;
     for (int step = 0; step <= 1; step++) {
+      if (step == 1) {
+        cmds.add("-demuxer"); //$NON-NLS-1$
+        cmds.add("lavf"); //$NON-NLS-1$
+      }        
       ExecResult res = run(cmds.toArray(new String[0]), firstCall ? timeoutFirstCall : timeoutInfo);
       if (firstCall) {
         firstCall = false;
-        maxLines = 2000;
       }
 
       String info = res.output;
-      if (step == 0 && info != null && info.indexOf("File not found") >= 0 && !fixed) {
+      if (step == 0 && info != null && info.indexOf("File not found") >= 0 && !fixed) { //$NON-NLS-1$
         fixed = true;
         String shortName = getShortName(inOrg);
         if (shortName != null) {
           if (verbose) {
-            System.err.println("Usando nome curto = " + shortName);
+            System.err.println("Using short name = " + shortName); //$NON-NLS-1$
           }
           in = new File(inOrg.getParentFile(), shortName);
           cmds.set(cmds.size() - 1, in.getPath());
@@ -116,7 +120,7 @@ public class VideoThumbsMaker {
         lnk = makeLink(inOrg, subTmp);
         if (lnk != null) {
           if (verbose) {
-            System.err.println("Usando link = " + lnk);
+            System.err.println("Using link = " + lnk); //$NON-NLS-1$
           }
           in = lnk;
           cmds.set(cmds.size() - 1, in.getPath());
@@ -125,38 +129,25 @@ public class VideoThumbsMaker {
         }
       }
       if (info != null) {
-        long duration = getDuration(info);
-        result.setVideoDuration(duration);
+          result.setVideoInfo(info);
+          videoStream = result.getVideoStream();
 
-        Dimension dimension = getDimension(info);
-        result.setDimension(dimension);
-
-        String s = getVideoStream(info);
-        if (s != null) {
-          videoStream = s;
-        }
-
-        if (result.getVideoDuration() > 0 && result.getDimension() != null) {
-          break;
-        }
+          if (result.getVideoDuration() > 0 && result.getDimension() != null) {
+              break;
+          }
       }
-
-      cmds.add(1, "-demuxer");
-      cmds.add(2, "lavf");
     }
     if (outs == null) {
-      result.setFile(in);
-      result.setSubTemp(subTmp);
       return result;
     }
-
+    
     if (result.getVideoDuration() == 0 || result.getDimension() == null || result.getDimension().width == 0 || result.getDimension().height == 0) {
       cleanTemp(subTmp);
       return result;
     }
 
     if (verbose) {
-      System.err.println("DURATION: " + result.getVideoDuration());
+      System.err.println("DURATION: " + result.getVideoDuration()); //$NON-NLS-1$
     }
 
     int maxThumbs = 0;
@@ -170,50 +161,89 @@ public class VideoThumbsMaker {
         maxWidth = config.getThumbWidth();
       }
     }
-    int frequency = (int) ((result.getVideoDuration() - 1) * 0.001 / (maxThumbs + 2));
+    int frequency = (int) ((result.getVideoDuration() - 1000) * 0.00095 / (maxThumbs + 2));
     if (frequency < 1) {
       frequency = 1;
     }
 
-    String s1 = "VO: [jpeg] ";
-    String s2 = " => ";
+    String s1 = "VO: [jpeg] "; //$NON-NLS-1$
+    String s2 = " => "; //$NON-NLS-1$
     File[] files = null;
 
     int maxHeight = result.getDimension().height * maxWidth / result.getDimension().width;
-    String scale = "scale=" + maxWidth + ":" + maxHeight;
+    String scale = "scale=" + maxWidth + ":" + maxHeight; //$NON-NLS-1$ //$NON-NLS-2$
 
     boolean scaled = result.getDimension().width > maxWidth;
     cmds = new ArrayList<String>();
     cmds.add(mplayer);
-    cmds.add("-demuxer");
-    cmds.add("lavf");
-    cmds.add("-nosound");
-    cmds.add("-noconsolecontrols");
-    cmds.add("-noautosub");
+    cmds.add("-speed"); //$NON-NLS-1$
+    cmds.add("100"); //$NON-NLS-1$
+    cmds.add("-dr"); //$NON-NLS-1$
+    cmds.add("-nosound"); //$NON-NLS-1$
+    cmds.add("-noconsolecontrols"); //$NON-NLS-1$
+    cmds.add("-noautosub"); //$NON-NLS-1$
     if (ignoreWaitKeyFrame != 1) {
-      cmds.add("-lavdopts");
-      cmds.add("wait_keyframe");
+      cmds.add("-lavdopts"); //$NON-NLS-1$
+      cmds.add("wait_keyframe"); //$NON-NLS-1$
     }
     if (scaled) {
-      cmds.addAll(Arrays.asList(new String[]{"-sws", "0", "-vf", scale}));
+      cmds.addAll(Arrays.asList(new String[]{"-sws", "0", "-vf", scale})); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
     }
 
     if (videoStream != null) {
-      cmds.add("-vid");
+      cmds.add("-vid"); //$NON-NLS-1$
       cmds.add(videoStream);
     }
 
-    String ssVal = String.valueOf(result.getVideoDuration() < 5000 ? 0 : Math.max(frequency / 2, 1));
-    cmds.addAll(Arrays.asList(new String[]{"-vo", "jpeg:smooth=50:nobaseline:quality=" + quality + ":outdir=" + escape + subTmp.getPath().replace('\\', '/') + escape, "-ao", "null", "-ss", ssVal, "-sstep", String.valueOf(frequency), "-frames", String.valueOf(maxThumbs + 1), in.getPath()}));
+    cmds.addAll(Arrays.asList(new String[]{"-vo", "jpeg:smooth=50:nobaseline:quality=" + quality + ":outdir=" + escape + subTmp.getPath().replace('\\', '/') + escape, "-ao", "null", "-ss", "1", "-sstep", String.valueOf(frequency), "-frames", String.valueOf(maxThumbs + 1), in.getPath()})); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$ //$NON-NLS-5$ //$NON-NLS-6$ //$NON-NLS-7$ //$NON-NLS-8$ //$NON-NLS-9$
 
-    for (int step = 0; step <= 2; step++) {
+    int initialStep = frequency > 1 ? 0 : 1;
+    for (int step = initialStep; step <= 3; step++) {
+      if (step == 1) {
+        int pos = cmds.indexOf("-sstep"); //$NON-NLS-1$
+        cmds.remove(pos + 1);
+        cmds.remove(pos);
+        pos = cmds.indexOf("-ss"); //$NON-NLS-1$
+        cmds.remove(pos + 1);
+        cmds.remove(pos);
+        float fps = result.getFPS();
+        if (fps > 240) fps = 1;
+        int frameStep = (int)(fps * (result.getVideoDuration() - 1) * 0.001 / (maxThumbs + 2));
+        if (frameStep < 1) {
+            frameStep = 1;
+        } else if (frameStep > 600) {
+            frameStep = 600;
+        }
+        cmds.add("-vf"); //$NON-NLS-1$
+        cmds.add("framestep=" + frameStep); //$NON-NLS-1$
+      } else if (step == 2) {
+        int pos = cmds.indexOf("-vid"); //$NON-NLS-1$
+        if (pos < 0) {
+          continue;
+        } else {
+          cmds.remove(pos + 1);
+          cmds.remove(pos);
+        }
+      } else if (step == 3) {
+        cmds.add("-demuxer"); //$NON-NLS-1$
+        cmds.add("lavf"); //$NON-NLS-1$
+        for (int i = cmds.size() - 1; i > 0; i--) {
+            if (cmds.get(i).startsWith("framestep=")) { //$NON-NLS-1$
+                cmds.remove(i);
+                cmds.remove(i - 1);
+                break;
+            }
+        }
+      }
       ExecResult res = run(cmds.toArray(new String[0]), timeoutProcess);
       if (res.timeout) {
         result.setTimeout(true);
+      } else if (result.isTimeout()) {
+        result.setTimeout(false);
       }
       files = subTmp.listFiles(new FileFilter() {
         public boolean accept(File pathname) {
-          return pathname.getName().toLowerCase().endsWith(".jpg");
+          return pathname.getName().toLowerCase().endsWith(".jpg"); //$NON-NLS-1$
         }
       });
       String ret = res.output;
@@ -223,11 +253,11 @@ public class VideoThumbsMaker {
           if (p1 > 0) {
             int p2 = ret.indexOf(s2, p1);
             if (p2 > 0) {
-              int p3 = ret.indexOf(" ", p2 + s2.length());
+              int p3 = ret.indexOf(" ", p2 + s2.length()); //$NON-NLS-1$
               if (p3 > 0) {
                 String[] s = ret.substring(p1 + s1.length(), p3).split(s2);
                 if (s.length == 2) {
-                  s = s[1].split("x");
+                  s = s[1].split("x"); //$NON-NLS-1$
                   scaled = true;
                   Dimension nd = new Dimension(Integer.parseInt(s[0]), Integer.parseInt(s[1]));
                   if (!nd.equals(result.getDimension())) {
@@ -235,7 +265,7 @@ public class VideoThumbsMaker {
                     int pos = cmds.indexOf(scale);
                     if (pos >= 0) {
                       maxHeight = result.getDimension().height * maxWidth / result.getDimension().width;
-                      scale = "scale=" + maxWidth + ":" + maxHeight;
+                      scale = "scale=" + maxWidth + ":" + maxHeight; //$NON-NLS-1$ //$NON-NLS-2$
                       cmds.set(pos, scale);
                       step--;
                       continue;
@@ -246,39 +276,21 @@ public class VideoThumbsMaker {
             }
           }
         }
-        if (ignoreWaitKeyFrame == 0 && step == 0) {
+        if (ignoreWaitKeyFrame == 0 && step == initialStep) {
           String rlc = ret.toLowerCase();
-          if ((rlc.indexOf("unknown") >= 0 || rlc.indexOf("suboption") >= 0 || rlc.indexOf("error") >= 0) && (rlc.indexOf("lavdopts") >= 0 || rlc.indexOf("wait_keyframe") >= 0)) {
-            step = -1;
+          if ((rlc.indexOf("unknown") >= 0 || rlc.indexOf("suboption") >= 0 || rlc.indexOf("error") >= 0) && (rlc.indexOf("lavdopts") >= 0 || rlc.indexOf("wait_keyframe") >= 0)) { //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$ //$NON-NLS-5$
+            step = initialStep - 1;
             ignoreWaitKeyFrame = 1;
-            int pos = cmds.indexOf("-lavdopts");
+            int pos = cmds.indexOf("-lavdopts"); //$NON-NLS-1$
             cmds.remove(pos + 1);
             cmds.remove(pos);
-            System.err.println(">>>>> OPCAO '-lavdopts wait_keyframe' DESABILITADA.");
+            System.err.println(">>>>> OPTION '-lavdopts wait_keyframe' DISABLED."); //$NON-NLS-1$
             continue;
           }
         }
-        if (files.length > (maxThumbs - 1) / 3 && ret.indexOf("Error while decoding frame") < 0) {
+        if (files.length >= maxThumbs - 2 && ((ret.indexOf("Error while decoding frame") < 0 && ret.indexOf("first frame is no keyframe") < 0) || (step > 0))) { //$NON-NLS-1$ //$NON-NLS-2$
           break;
         }
-      }
-      if (step == 0) {
-        int pos = cmds.indexOf("-vid");
-        if (pos < 0) {
-          step++;
-        } else {
-          cmds.remove(pos + 1);
-          cmds.remove(pos);
-          continue;
-        }
-      }
-      if (step == 1) {
-        int pos = cmds.indexOf("-sstep");
-        cmds.remove(pos + 1);
-        cmds.remove(pos);
-        pos = cmds.indexOf("-ss");
-        cmds.remove(pos + 1);
-        cmds.remove(pos);
       }
     }
     if (ignoreWaitKeyFrame == 0) {
@@ -313,9 +325,9 @@ public class VideoThumbsMaker {
     try {
       String ext = getExtensao(in.getName());
       if (ext == null) {
-        ext = "";
+        ext = ""; //$NON-NLS-1$
       }
-      File lnk = new File(dir, "vtc" + System.currentTimeMillis() + ext);
+      File lnk = new File(dir, "vtc" + System.currentTimeMillis() + ext); //$NON-NLS-1$
       lnk.deleteOnExit();
       Path link = Files.createSymbolicLink(lnk.toPath(), in.toPath());
       return link.toFile();
@@ -328,16 +340,16 @@ public class VideoThumbsMaker {
     if (!isWindows) {
       return null;
     }
-    String[] cdir = new String[]{"cmd", "/c", "dir", "/x", in.getPath()};
+    String[] cdir = new String[]{"cmd", "/c", "dir", "/x", in.getPath()}; //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$
     ExecResult res = run(cdir, 1000);
     String sdir = res.output;
     if (sdir != null && res.exitCode == 0) {
       String ext = getExtensao(in.getName());
       if (ext != null) {
-        String[] lines = sdir.split("\n");
+        String[] lines = sdir.split("\n"); //$NON-NLS-1$
         for (String line : lines) {
           if (line.endsWith(ext)) {
-            String[] s = line.split(" +");
+            String[] s = line.split(" +"); //$NON-NLS-1$
             if (s.length > 4) {
               String shortName = s[3];
               if (shortName.indexOf('~') > 0) {
@@ -353,6 +365,12 @@ public class VideoThumbsMaker {
 
   private void generateGridImage(VideoThumbsOutputConfig config, List<File> images, Dimension dimension) throws IOException {
     int w = config.getThumbWidth();
+    if (images.size() > config.getRows() * config.getColumns()) {
+      images.remove(0);
+    }
+    if (images.size() > config.getRows() * config.getColumns()) {
+      images.remove(images.size() - 1);
+    }
     double rate = images.size() * 0.999 / (config.getRows() * config.getColumns());
     int h = dimension.height * w / dimension.width;
     int border = config.getBorder();
@@ -379,8 +397,7 @@ public class VideoThumbsMaker {
       }
     }
     g2.dispose();
-    //ImageIO.write(img, "jpeg", config.getOutFile());
-    ImageUtil.saveJpegWithMetadata(img, config.getOutFile(), "Frames=" + config.getRows() + "x" + config.getColumns());
+    ImageUtil.saveJpegWithMetadata(img, config.getOutFile(), "Frames=" + config.getRows() + "x" + config.getColumns()); //$NON-NLS-1$ //$NON-NLS-2$
   }
 
   public void cleanTemp(File subTmp) {
@@ -391,70 +408,14 @@ public class VideoThumbsMaker {
     subTmp.delete();
   }
 
-  private long getDuration(String info) throws Exception {
-    String s1 = "ID_LENGTH=";
-    int p1 = info.indexOf(s1);
-    if (p1 < 0) {
-      return -1;
-    }
-    int p2 = info.indexOf('\n', p1);
-    String s = info.substring(p1 + s1.length(), p2);
-    if (s.isEmpty() || !Character.isDigit(s.charAt(0))) {
-      return -1;
-    }
-    return (long) (1000 * Double.parseDouble(s));
-  }
-
-  private String getVideoStream(String info) throws Exception {
-    String s1 = "Video stream found, -vid ";
-    int p1 = info.indexOf(s1);
-    if (p1 < 0) {
-      return null;
-    }
-    int p2 = info.indexOf('\n', p1);
-    if (p2 < 0) {
-      return null;
-    }
-    String s = info.substring(p1 + s1.length(), p2);
-    if (s.length() != 1) {
-      return null;
-    }
-    if (!Character.isDigit(s.charAt(0))) {
-      return null;
-    }
-    return s;
-  }
-
-  private Dimension getDimension(String info) throws Exception {
-    String s1 = "ID_VIDEO_WIDTH=";
-    int p1 = info.indexOf(s1);
-    if (p1 < 0) {
-      return null;
-    }
-    int p2 = info.indexOf('\n', p1);
-    if (p2 < 0) {
-      return null;
-    }
-    String s3 = "ID_VIDEO_HEIGHT=";
-    int p3 = info.indexOf(s3);
-    if (p3 < 0) {
-      return null;
-    }
-    int p4 = info.indexOf('\n', p3);
-    if (p4 < 0) {
-      return null;
-    }
-    return new Dimension(Integer.parseInt(info.substring(p1 + s1.length(), p2)), Integer.parseInt(info.substring(p3 + s3.length(), p4)));
-  }
-
   private final ExecResult run(String[] cmds, int timeout) {
     if (verbose) {
-      System.err.print("CMD = ");
+      System.err.print("CMD = "); //$NON-NLS-1$
       for (int i = 0; i < cmds.length; i++) {
-        System.err.print(cmds[i] + " ");
+        System.err.print(cmds[i] + " "); //$NON-NLS-1$
       }
       System.err.println();
-      System.err.print("TIMEOUT = " + timeout);
+      System.err.print("TIMEOUT = " + timeout); //$NON-NLS-1$
       System.err.println();
     }
 
@@ -463,35 +424,25 @@ public class VideoThumbsMaker {
     int exitCode = -1000;
     boolean isTimeout = false;
     try {
-      final Process process = Runtime.getRuntime().exec(cmds);
-
-      StreamGobbler errorGobbler = new StreamGobbler(process.getErrorStream(), sb, counter, process);
+      final ProcessBuilder pb = new ProcessBuilder(cmds);
+      pb.redirectErrorStream(true);
+      Process process = pb.start();
       StreamGobbler outputGobbler = new StreamGobbler(process.getInputStream(), sb, counter, process);
-
-      errorGobbler.start();
       outputGobbler.start();
 
-      long t = System.currentTimeMillis() + timeout;
-      while (true) {
-        Thread.sleep(10);
-        try {
-          exitCode = process.exitValue();
-          break;
-        } catch (IllegalThreadStateException threadStateException) {
-          if (System.currentTimeMillis() > t) {
-            if (verbose) {
-              System.err.println("TIMEOUT");
-            }
-            isTimeout = true;
-            process.destroy();
-            break;
-          }
-        }
+      boolean finished = process.waitFor(timeout, TimeUnit.MILLISECONDS);
+      if (!finished) {
+          if (verbose) System.err.println("TIMEOUT!");
+          isTimeout = true;
+          process.destroyForcibly();
       }
+      outputGobbler.join();
+      exitCode = process.exitValue();
+      
       return new ExecResult(exitCode, sb.toString(), isTimeout);
     } catch (Exception e) {
       if (verbose) {
-        System.err.print("Erro executando comando '");
+        System.err.print("Error running program '"); //$NON-NLS-1$
         e.printStackTrace();
       }
     }
@@ -534,13 +485,12 @@ public class VideoThumbsMaker {
 
     InputStream is;
     StringBuilder sb;
-    AtomicInteger counter;
+    int counter;
     Process process;
 
     StreamGobbler(InputStream is, StringBuilder sb, AtomicInteger counter, Process process) {
       this.is = is;
       this.sb = sb;
-      this.counter = counter;
       this.process = process;
       setDaemon(true);
     }
@@ -548,19 +498,17 @@ public class VideoThumbsMaker {
     public void run() {
       BufferedReader br = null;
       try {
-        br = new BufferedReader(new InputStreamReader(is), 256);
+        br = new BufferedReader(new InputStreamReader(is), 4096);
         String line = null;
         while ((line = br.readLine()) != null) {
-          synchronized (sb) {
-            counter.incrementAndGet();
-            sb.append(line).append('\n');
-            if (verbose) {
-              System.err.println(line);
-            }
-            if (line.indexOf("Error while decoding frame!") >= 0 || counter.intValue() > maxLines) {
-              process.destroy();
-              break;
-            }
+          counter++;
+          sb.append(line).append('\n');
+          if (verbose) {
+            System.err.println(line);
+          }
+          if (counter > maxLines) {
+            process.destroyForcibly();
+            break;
           }
         }
       } catch (IOException ioe) {
